# i3-bind

./: README.md  pyproject.toml
i3_bind/: main.py
